common-applications/control/etherpad/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etherpad-lite
spec:
  type: NodePort
  ports:
    - name: ether-http
      port: 80
      # We pinned NodePort to fix number in order to used NodePort service
      nodePort: 32717
