common-applications/control/etherpad/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: etherpad
spec:
  tls:
    - hosts:
        - etherpad.mindspore.cn
      secretName: etherpad-tls
  rules:
    - host: etherpad.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: etherpad-lite
              servicePort: 80
            path: /
